deployment/feature-flags-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: feature-flags-service
spec:
  type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: feature-flags-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feature-flags-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feature-flags-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: feature-flags-service
    spec:
      containers:
        - env:
            - name: DATABASE_NAME
              value: feature_flags
            - name: MONGODB_URI
              value: mongodb://root:root@mongo:27017
          image: thisk8brd/feature-flags-service
          name: feature-flags-service
          ports:
            - containerPort: 8080
      restartPolicy: Always
