deployment/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
spec:
  rules:
  - host: "ff.pacheco.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: feature-flags-app
            port:
              number: 80
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: feature-flags-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/flags"
        backend:
          service:
            name: feature-flags-service
            port:
              number: 8080
